--- a/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
+++ b/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
@@ -1,13 +1,13 @@
 ### 2.3.1 依赖管理和命名约定
 
-依赖管理和依赖注入不是同一个概念，为了在你的应用程序中使用 Spring 的功能（如依赖注入），你需要在编译或运行期将所依赖的库（jar文件）导入到应用的 classpath 中。这些依赖关系通常是文件系统中的物理资源，而非依赖注入概念中由 IoC 容器创建的抽象资源。依赖关系的管理过程包括对这些资源的定位、存储、以及将其添加到 classpath 中。依赖关系可以是直接的（例如应用程序在运行时依赖于 Spring），也可以是间接的（例如应用程序依赖于 commons-pool，而commons-pool 依赖于 commons-dbcp，故应用程序间接依赖于 commons-dbcp）。间接依赖关系也被称为“传递性”依赖，属于最难识别和管理的依赖关系。
+依赖管理和依赖注入不是同一个概念，要应用程序中使用 Spring 的功能（如依赖注入），需要在编译或运行期将所依赖的库（jar文件）导入到应用的 classpath 中。这些依赖关系通常是文件系统中的物理资源，而非依赖注入概念中由 IoC 容器创建的抽象资源。依赖关系的管理过程包括对这些资源的定位、存储、以及将其添加到 classpath 中。依赖关系可以是直接的（例如应用程序在运行时依赖于 Spring），也可以是间接的（例如应用程序依赖于 commons-pool，而commons-pool 依赖于 commons-dbcp，故应用程序间接依赖于 commons-dbcp）。间接依赖关系也被称为“传递性”依赖，属于最难识别和管理的依赖关系。
 
 如果要使用 Spring，你需要获得一个包含你所需功能的库文件（jar），Spring 被打包为一系列模块，各个模块之间尽可能的分离依赖关系，以便你可以只使用需要的模块而忽略其余模块，例如，如果你不是编写 Web 应用程序，则不需要引入 `spring-web` 模块。Spring 各模块的库文件使用一种简写约定命名，如 `spring-*` 或 `spring-*.jar`，其中 `*` 表示模块名称（如 `spring-core`、 `spring-webmvc`、 `spring-jms` 等）。实际使用的 jar 文件名通常在模块名后以短横线连接了该模块的版本号（如 `spring-core-5.0.0.M4.jar`）。
 
 Spring 框架的每个版本都会将库文件发布到以下位置：
 
 * **[Maven Central](https://search.maven.org)**，Maven 默认的查询仓库，不需要任何特殊配置即可使用，许多 Spring 依赖的库也可以在这里找到，Spring 社区的大部分项目都是使用 Maven 进行依赖管理。在 Maven 中 Spring 模块的 jar 名称（artifactId）是 `spring-*-<version>.jar` 的形式，groupId 为 `org.springframework`。
-* **[一个专门用于 Spring 的公共 Maven 仓库](http://maven.springframework.org)**，除了最终的 GA 版本，这个仓库还存储快照版本（[snapshots](http://maven.springframework.org/snapshot)）和里程碑版本（[milestones](http://maven.springframework.org/milestone)）。其中的 jar 文件命名与 Maven Central 一致，这里可以用于获取 Spring 的开发版本，并可以和 Maven Central 配合使用。这里还存储着包含 Spring 所有模块的 zip 文件包，便于一次性下载 Spring 的所有 jar 文件。
+* **[一个专门用于 Spring 的公共 Maven 仓库](http://repo.spring.io)**，除了最终的 GA 版本，这个仓库还存储快照版本（[snapshots](http://repo.spring.io/snapshot)）和里程碑版本（[milestones](http://repo.spring.io/milestone)）。其中的 jar 文件命名与 Maven Central 一致，这里可以用于获取 Spring 的开发版本，并可以和 Maven Central 配合使用。这里还存储着包含 Spring 所有模块的 zip 文件包，便于一次性下载 Spring 的所有 jar 文件。
 
 你首先需要决定如何管理你的依赖关系，我们建议使用一个自动化的依赖管理工具，如 Maven、 Gradle、 或 Ivy，当然你也可以手动下载所有的 jar 文件。
 
@@ -40,14 +40,13 @@ Spring 框架的每个版本都会将库文件发布到以下位置：
   
 #### Spring 依赖管理
 
-Although Spring provides integration and support for a huge range of enterprise and other external tools, it intentionally keeps its mandatory dependencies to an absolute minimum: you shouldn’t have to locate and download \(even automatically\) a large number of jar libraries in order to use Spring for simple use cases. For basic dependency injection there is only one mandatory external dependency, and that is for logging \(see below for a more detailed description of logging options\).
+尽管 Spring 为大量的企业应用和外部工具提供了集成和支持，但强制依赖很少，不必为了开发一个简单的 Spring 应用而查找和下载大量的 jar 包。对于基本的依赖注入，只有一个强制性的外部依赖关系，即日志（有关日志记录的详细描述请参阅下文）。
 
-Next we outline the basic steps needed to configure an application that depends on Spring, first with Maven and then with Gradle and finally using Ivy. In all cases, if anything is unclear, refer to the documentation of your dependency management system, or look at some sample code - Spring itself uses Gradle to manage dependencies when it is building, and our samples mostly use Gradle or Maven.
+接下来介绍使用依赖管理工具为应用程序配置 Spring 依赖的基本步骤，首先使用 Maven，然后使用 Gradle，最后使用 Ivy。如果有不清楚的地方，可以参阅这些依赖管理工具的文档，或者查看一些示例代码。Spring 本身在构建时是使用 Gradle 来管理依赖关系，而接下来的示例主要使用 Gradle 或 Maven。
 
+#### Maven 依赖管理
 
-#### Maven Dependency Management
-
-If you are using[Maven](https://maven.apache.org/)for dependency management you don’t even need to supply the logging dependency explicitly. For example, to create an application context and use dependency injection to configure an application, your Maven dependencies will look like this:
+如果使用 [Maven](https://maven.apache.org/) 进行以来管理，则不需要显式的提供日志依赖关系。例如，要使用 Spring 的应用程序上下文和注入容器，那 Maven 的依赖配置如下：
 
 ```xml
 <dependencies>
@@ -60,9 +59,9 @@ If you are using[Maven](https://maven.apache.org/)for dependency management you 
 </dependencies>
 ```
 
-That’s it. Note the scope can be declared as runtime if you don’t need to compile against Spring APIs, which is typically the case for basic dependency injection use cases.
+注意这里将 `spring-context` 依赖的范围（`scope`）指定为 `runtime`，如果应用程序对 Spring API 的依赖只在运行和测试时需要，而在编译时不需要，那么依赖范围可以指定为 `runtime`。
 
-The example above works with the Maven Central repository. To use the Spring Maven repository \(e.g. for milestones or developer snapshots\), you need to specify the repository location in your Maven configuration. For full releases:
+上面的示例适用于使用 Maven Central 仓库，如果要使用 Spring Maven 仓库，（例如使用 Spring 的 [snapshots](http://repo.spring.io/snapshot) 或 [milestones](http://repo.spring.io/milestone) 版本），需要在 Maven 配置中指定仓库位置，如使用正式发布版的配置：
 
 ```xml
 <repositories>
@@ -74,7 +73,7 @@ The example above works with the Maven Central repository. To use the Spring Mav
 </repositories>
 ```
 
-For milestones:
+使用里程碑版本的配置：
 
 ```xml
 <repositories>
@@ -86,7 +85,7 @@ For milestones:
 </repositories>
 ```
 
-And for snapshots:
+使用开发快照版本的配置:
 
 ```xml
 <repositories>
@@ -98,11 +97,11 @@ And for snapshots:
 </repositories>
 ```
 
-#### Maven "Bill Of Materials" Dependency
+#### Maven BOM （Bill Of Materials）
 
-It is possible to accidentally mix different versions of Spring JARs when using Maven. For example, you may find that a third-party library, or another Spring project, pulls in a transitive dependency to an older release. If you forget to explicitly declare a direct dependency yourself, all sorts of unexpected issues can arise.
+在使用 Maven 管理项目时，有时可能会引入不同版本 Spring，例如一些第三方库或另外一个基于 Spring 的项目依赖了旧版本的 Spring，如果不显式声明你的直接依赖，可能会出现各种意外问题。
 
-To overcome such problems Maven supports the concept of a "bill of materials" \(BOM\) dependency. You can import the`spring-framework-bom`in your`dependencyManagement`section to ensure that all spring dependencies \(both direct and transitive\) are at the same version.
+针对这个问题，Maven 支持一种 “bill of materials”（BOM）依赖的概念，你可以在 `dependencyManagement` 中直接引入 `spring-framework-bom`，以确保依赖的所有 Spring 模块（包括直接的和间接的）都是同一版本。
 
 ```xml
 <dependencyManagement>
@@ -118,7 +117,7 @@ To overcome such problems Maven supports the concept of a "bill of materials" \(
 </dependencyManagement>
 ```
 
-An added benefit of using the BOM is that you no longer need to specify the `<version>` attribute when depending on Spring Framework artifacts:
+使用 BOM 的另一个好处是不再需要在依赖 Spring 的构件时指定版本号：
 
 ```xml
 <dependencies>
@@ -133,9 +132,11 @@ An added benefit of using the BOM is that you no longer need to specify the `<ve
 </dependencies>
 ```
 
-#### Gradle Dependency Management
+#### Gradle 依赖管理
 
 To use the Spring repository with the[Gradle](http://www.gradle.org/)build system, include the appropriate URL in the`repositories`section:
+
+要在 [Gradle](http://www.gradle.org/) 构建项目时使用 Spring 仓库，需要在 `repositories` 部分指定仓库 URL：
 
 ```yaml
 repositories {
@@ -145,7 +146,7 @@ repositories {
 }
 ```
 
-You can change the `repositories` URL from `/release` to `/milestone` or `/snapshot` as appropriate. Once a repository has been configured, you can declare dependencies in the usual Gradle way:
+根据需要可以将 `repositories` URL 从 `/release` 改为 `/milestone` 或 `/snapshot`。配置好仓库后，就可以使用 Gradle 的方式声明依赖关系：
 
 ```yaml
 dependencies {
@@ -154,11 +155,9 @@ dependencies {
 }
 ```
 
-#### Ivy Dependency Management
+#### Ivy 依赖管理
 
-If you prefer to use[Ivy](https://ant.apache.org/ivy)to manage dependencies then there are similar configuration options.
-
-To configure Ivy to point to the Spring repository add the following resolver to your`ivysettings.xml`:
+你也可以使用 [Ivy](https://ant.apache.org/ivy) 来管理依赖关系，要在 Ivy 中使用 Spring 仓库，需要将以下解析器添加到你的 `ivysettings.xml` 中。
 
 ```xml
 <resolvers>
@@ -168,20 +167,13 @@ To configure Ivy to point to the Spring repository add the following resolver to
 </resolvers>
 ```
 
-You can change the`root`URL from`/release/`to`/milestone/`or`/snapshot/`as appropriate.
-
-Once configured, you can add dependencies in the usual way. For example \(in`ivy.xml`\):
+根据需要可以将 `root` URL 从 `/release` 改为 `/milestone` 或 `/snapshot`。配置好仓库后，就可以使用 Ivy 的方式声明依赖关系（如 ivy.xml）：
 
 ```xml
 <dependency org="org.springframework"
 	name="spring-core" rev="5.0.0.M4" conf="compile->runtime"/>
 ```
 
-#### Distribution Zip Files
+#### Zip 分发文件
 
-Although using a build system that supports dependency management is the recommended way to obtain the Spring Framework, it is still possible to download a distribution zip file.
-
-Distribution zips are published to the Spring Maven Repository \(this is just for our convenience, you don’t need Maven or any other build system in order to download them\).
-
-To download a distribution zip open a web browser to[http://repo.spring.io/release/org/springframework/spring](http://repo.spring.io/release/org/springframework/spring)and select the appropriate subfolder for the version that you want. Distribution files end`-dist.zip`, for example spring-framework-{spring-version}-RELEASE-dist.zip. Distributions are also published for[milestones](http://repo.spring.io/milestone/org/springframework/spring)and[snapshots](http://repo.spring.io/snapshot/org/springframework/spring).
-
+推荐使用上述自动化的依赖管理工具来获取和管理 Spring 框架。当然，你也可以通过下载 Zip 压缩包来获取 Spring 框架。方便起见，我们将 Spring 的所有模块打包为 zip 文件，并发布在 Spring Maven 仓库中，你可以访问 [http://repo.spring.io/release/org/springframework/spring](http://repo.spring.io/release/org/springframework/spring) 并选择需要的版本进行下载，这些 zip 压缩包的文件名通常以 `-dist.zip` 结尾，如 `spring-framework- {spring-version} -RELEASE-dist.zip`，另外还发布了里程碑（[milestones](http://repo.spring.io/milestone/org/springframework/spring)）和快照（[snapshots](http://repo.spring.io/snapshot/org/springframework/spring)）版本。
