--- a/PartI/0013-2.3.2-Logging.md
+++ b/PartI/0013-2.3.2-Logging.md
@@ -1,4 +1,6 @@
-### 2.3.2 Logging
+### 2.3.2 日志记录
+
+日志记录是 Spring 的一个非常重要的依赖，首先它是 Spring 唯一一个强制性的外部依赖；其次几乎所有开发者和应用程序都有日记输出和记录的需求；另外 Spring 集成了许多其他工具，而这些工具都有对日志记录的依赖。
 
 Logging is a very important dependency for Spring because_a\)_it is the only mandatory external dependency,_b\)_everyone likes to see some output from the tools they are using, and_c\)_Spring integrates with lots of other tools all of which have also made a choice of logging dependency. One of the goals of an application developer is often to have unified logging configured in a central place for the whole application, including all external components. This is more difficult than it might have been since there are so many choices of logging framework.
 
