--- a/PartI/0013-2.3.2-Logging.md
+++ b/PartI/0013-2.3.2-Logging.md
@@ -1,23 +1,21 @@
 ### 2.3.2 日志记录
 
-日志记录是 Spring 的一个非常重要的依赖，首先它是 Spring 唯一一个强制性的外部依赖；其次几乎所有开发者和应用程序都有日记输出和记录的需求；另外 Spring 集成了许多其他工具，而这些工具都有对日志记录的依赖。
+日志记录是 Spring 的一个非常重要的依赖，首先它是 Spring 唯一一个强制性的外部依赖；其次几乎所有开发者和应用程序都有日记输出和日志记录的需求；另外 Spring 集成了许多其他工具，而这些工具都有对日志记录的依赖。
 
-Logging is a very important dependency for Spring because_a\)_it is the only mandatory external dependency,_b\)_everyone likes to see some output from the tools they are using, and_c\)_Spring integrates with lots of other tools all of which have also made a choice of logging dependency. One of the goals of an application developer is often to have unified logging configured in a central place for the whole application, including all external components. This is more difficult than it might have been since there are so many choices of logging framework.
+Spring 强制依赖于 Jakarta Commons Logging 的 API（JCL），即现在的 Apache Commons Logging.Spring 的日志支持基于 JCL API 编译，并使 JCL Log 对象对于 Spring 框架的扩展类可见。Spring 框架的所有版本都使用相同的日志库，这样使得 Spring 应用程序具有良好的可迁移性和向后兼容性。Spring 的 `spring-core` 模块依赖 `commons-logging` （JCL 的标准化实现），其它模块通过依赖 `spring-core` 实现对日志框架的使用。
 
-The mandatory logging dependency in Spring is the Jakarta Commons Logging API \(JCL\). We compile against JCL and we also make JCL`Log`objects visible for classes that extend the Spring Framework. It’s important to users that all versions of Spring use the same logging library: migration is easy because backwards compatibility is preserved even with applications that extend Spring. The way we do this is to make one of the modules in Spring depend explicitly on`commons-logging`\(the canonical implementation of JCL\), and then make all the other modules depend on that at compile time. If you are using Maven for example, and wondering where you picked up the dependency on`commons-logging`, then it is from Spring and specifically from the central module called`spring-core`.
+`commons-logging` 是 Apache 早期提供的日志门面接口，其主要作用是提供一套日志接口，使用者可以自由的选择第三方的日志组件作为具体实现，如 Log4J、 Logback、 以及 JDK 提供的日志工具（java.util.logging，JUL）。`commons-logging` 实现了一个运行时发现算法，利用动态查找机制，在应用程序运行期从一些约定俗称的 classpath 中查找具体的日志实现框架。另外 `commons-logging` 内部有一个简单的日志实现，但功能很弱。
 
-The nice thing about`commons-logging`is that you don’t need anything else to make your application work. It has a runtime discovery algorithm that looks for other logging frameworks in well known places on the classpath and uses one that it thinks is appropriate \(or you can tell it which one if you need to\). If nothing else is available you get pretty nice looking logs just from the JDK \(java.util.logging or JUL for short\). You should find that your Spring application works and logs happily to the console out of the box in most situations, and that’s important.
+#### 不使用 Commons Logging
 
-#### Not Using Commons Logging
+`commons-logging` 在运行时发现日志框架的算法确实带来了很大的便利，但也有存在一些问题，如果现在将 Spring 框架作为一个新项目开发的话，可能会使用其它的日志工具，第一选择可能是 Simple Logging Facade for Java（[SLF4J](http://www.slf4j.org/），SLF4J 现在已经被应用于许多基于 Spring 框架的应用程序。
 
-Unfortunately, the runtime discovery algorithm in`commons-logging`, while convenient for the end-user, is problematic. If we could turn back the clock and start Spring now as a new project it would use a different logging dependency. The first choice would probably be the Simple Logging Facade for Java \([SLF4J](http://www.slf4j.org/)\), which is also used by a lot of other tools that people use with Spring inside their applications.
+基本上有两种方法来关闭 `commons-logging`：
 
-There are basically two ways to switch off`commons-logging`:
+1. 从 `spring-core` 模块排除对 `commons-logging` 的依赖，因为 `spring-core` 是 Spring 框架中唯一一个明确依赖于 `commons-logging` 的模块。
+2. 依赖一个空 jar 包替代 `commons-logging`（更多细节可以参考 [SLF4J FAQ](http://slf4j.org/faq.html#excludingJCL)）。
 
-1. Exclude the dependency from the `spring-core` module \(as it is the only module that explicitly depends on `commons-logging`\)
-2. Depend on a special `commons-logging` dependency that replaces the library with an empty jar \(more details can be found in the [SLF4J FAQ](http://slf4j.org/faq.html#excludingJCL)\)
-
-To exclude commons-logging, add the following to your`dependencyManagement`section:
+要排除 `commons-logging`，可以在 `dependencyManagement` 中做如下配置：
 
 ```xml
 <dependencies>
@@ -35,15 +33,17 @@ To exclude commons-logging, add the following to your`dependencyManagement`secti
 </dependencies>
 ```
 
-Now this application is probably broken because there is no implementation of the JCL API on the classpath, so to fix it a new one has to be provided. In the next section we show you how to provide an alternative implementation of JCL using SLF4J as an example.
+这样配置后应用程序会无法运行，因为排除 `commons-logging` 后 classpath 中没有可用的 JCL API 实现。要解决这个问题就需要提供一个新的 JCL 日志框架。下一节中将介绍如何使用 SLF4J 来提供 JCL 的替代实现。
 
-#### Using SLF4J
+#### 使用 SLF4J
 
-SLF4J is a cleaner dependency and more efficient at runtime than`commons-logging`because it uses compile-time bindings instead of runtime discovery of the other logging frameworks it integrates. This also means that you have to be more explicit about what you want to happen at runtime, and declare it or configure it accordingly. SLF4J provides bindings to many common logging frameworks, so you can usually choose one that you already use, and bind to that for configuration and management.
+SLF4J 是 Simple Logging Facade for Java（简单 Java 日志门面）的简称，和 Apache Commons Logging 类似，也是提供一套日志接口门面的封装，可以不修改任何配置即可接入第三方的日志实现方案。SLF4J 是在编译时绑定具体的日志实现组件，因此相比 `commons-logging` 的“运行时查找”更加高效，但同时也意味着必须选择正确的桥接器和绑定器。
 
-SLF4J provides bindings to many common logging frameworks, including JCL, and it also does the reverse: bridges between other logging frameworks and itself. So to use SLF4J with Spring you need to replace the`commons-logging`dependency with the SLF4J-JCL bridge. Once you have done that then logging calls from within Spring will be translated into logging calls to the SLF4J API, so if other libraries in your application use that API, then you have a single place to configure and manage logging.
+SLF4J 桥接器（通常以 `xxx-over-slf4j` 格式命名）是一种可以把其它日志框架的输出重定向到 SLF4J 的组件，假如已有的应用程序使用了 JCL、 或 Log4J 甚至 JUL 作为日志输出，现在想引入 Logback 作为日志实现，则可以使用对应的桥接器将日志“忽悠”到 SLF4J 中，然后由 SLF4J 使用 Logback 实现日志输出。
 
-A common choice might be to bridge Spring to SLF4J, and then provide explicit binding from SLF4J to Log4J. You need to supply 4 dependencies \(and exclude the existing`commons-logging`\): the bridge, the SLF4J API, the binding to Log4J, and the Log4J implementation itself. In Maven you would do that like this
+SLF4J 绑定器（通常以 `slf4j-xxx` 格式命名）是一种将第三方日志实现组件接入 SLF4J 的中间层，如 Log4J、 JUL 等日志实现并不能通过 SLF4J 的接口直接调用，事实上它们和 SLF4J 的接口规范并不一致，因此需要一个中间层作为绑定器来适配各种日志实现组件，当然 `slf4j-simple` 除外，这个日志组件是对 SLF4J 的直接实现，不需要使用绑定器即可接入。
+
+在 Spring 应用中使用日志的常见做法是排除 Spring 本身对 `commons-logging` 的依赖，然后使用 JCL 到 SLF4J 的桥接器（`jcl-over-slf4j`）接入 SLF4J，这样 Spring 所使用的日志接口就由 `commons-logging` 变为 SLF4J，然后通过 SLF4J 到 Log4J 的绑定器（`slf4j-log4j12`）接入 Log4J 作为具体的日志实现方案。简而言之就是 JCL 把 SLF4J 当作日志实现，而 SLF4J 使用 Log4J 作为真正的日志实现。在 Maven 中可以这样配置：
 
 ```xml
 <dependencies>
@@ -81,15 +81,15 @@ A common choice might be to bridge Spring to SLF4J, and then provide explicit bi
 </dependencies>
 ```
 
-That might seem like a lot of dependencies just to get some logging. Well it is, but it_is_optional, and it should behave better than the vanilla`commons-logging`with respect to classloader issues, notably if you are in a strict container like an OSGi platform. Allegedly there is also a performance benefit because the bindings are at compile-time not runtime.
+这样做看起来似乎是配置了很多依赖关系仅仅是为了得到日志记录的支持，确实如此，但这是可选的。而且在类加载器方面比 `commons-logging` 更有优势，因为这样做不必依赖特殊的 ClassLoader 机制，特别是当运行在一个类加载模型定义严格的容器（如 OSGi）时。另外,据说“在编译时绑定日志实现”比“在运行时发现日志实现”性能更好。
 
-A more common choice amongst SLF4J users, which uses fewer steps and generates fewer dependencies, is to bind directly to[Logback](http://logback.qos.ch/). This removes the extra binding step because Logback implements SLF4J directly, so you only need to depend on two libraries not four \(`jcl-over-slf4j`and`logback`\). If you do that you might also need to exclude the slf4j-api dependency from other external dependencies \(not Spring\), because you only want one version of that API on the classpath.
+SLF4J 用户一个更常见的选择是使用 [Logback](http://logback.qos.ch/) 作为具体的日志实现方案，它可以使用较少的依赖关系，Logback 直接实现 SLF4J，因此它与 SLF4J 之间不需要绑定器，这样只需要配置 `jcl-over-slf4j` 和 `logback` 两个依赖。这样做的话，如果应用程序依赖的其它组件（非 Spring）依赖了 slf4j-api，则需将其排除，因为 classpath 中只需要存在一个版本的日志 API。
 
-#### Using Log4J
+#### 使用 Log4J
 
-Many people use[Log4j](https://logging.apache.org/log4j)as a logging framework for configuration and management purposes. It’s efficient and well-established, and in fact it’s what we use at runtime when we build and test Spring. Spring also provides some utilities for configuring and initializing Log4j, so it has an optional compile-time dependency on Log4j in some modules.
+很多开发者使用 Log4J 作为日志解决方案，Log4J 是一个成熟且高效的日志框架，事实上我们在构建和测试 Spring 时也是使用 Log4J 进行日志输出。Spring 提供了一些用于配置和初始化 Log4J 的实用程序，因此某些模块对 Log4J 具有可选的编译时依赖。
 
-To make Log4j work with the default JCL dependency \(`commons-logging`\) all you need to do is put Log4j on the classpath, and provide it with a configuration file \(`log4j.properties`or`log4j.xml`in the root of the classpath\). So for Maven users this is your dependency declaration:
+要使 Log4J 和默认的 JCL 依赖（`commons-logging`）一起工作，需要将 Log4J 引入 classpath 中，并为其提供配置文件（在 classpath 根目录中创建 `log4j.properties` 或 `log4j.xml`）。在 Maven 中的配置如下：
 
 ```xml
 <dependencies>
@@ -106,7 +106,7 @@ To make Log4j work with the default JCL dependency \(`commons-logging`\) all you
 </dependencies>
 ```
 
-And here’s a sample log4j.properties for logging to the console:
+下面是一个 log4j.properties 的实例，将日志输出到控制台：
 
 ```
 log4j.rootCategory=INFO, stdout
@@ -118,11 +118,10 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %t %c{2}:%L - %m
 log4j.category.org.springframework.beans.factory=DEBUG
 ```
 
-##### Runtime Containers with Native JCL
+##### 带有原生 JCL 实现的运行时容器
 
-Many people run their Spring applications in a container that itself provides an implementation of JCL. IBM Websphere Application Server \(WAS\) is the archetype. This often causes problems, and unfortunately there is no silver bullet solution; simply excluding`commons-logging`from your application is not enough in most situations.
+很多开发者在提供了 JCL 本地实现的容器中运行他们 Spring 应用程序，比如 IBM 的 Websphere Application Server（WAS），这往往会造成一些问题（比如日志实现组件的冲突可能会导致日志记录错乱甚至失效的问题），遗憾的是对于这个问题没有银弹，仅仅简单的排除 `commons-logging` 在多数情况下是不够的。
 
-To be clear about this: the problems reported are usually not with JCL per se, or even with`commons-logging`: rather they are to do with binding`commons-logging`to another framework \(often Log4J\). This can fail because`commons-logging`changed the way they do the runtime discovery in between the older versions \(1.0\) found in some containers and the modern versions that most people use now \(1.1\). Spring does not use any unusual parts of the JCL API, so nothing breaks there, but as soon as Spring or your application tries to do any logging you can find that the bindings to Log4J are not working.
+说白了，真正进行日志输出的并不是 JCL 本身，甚至不是 `commons-logging`，而是将 `commons-logging` 绑定到另一个日志框架（如 Log4J）。因为 `commons-logging` 的新版本改变了“运行时发现”的方式，若容器中依然使用旧版本，则可能导致日志记录失败。当 Spring 未使用任何 JCL API 时，不会出现问题，而一旦 Spring 或 你的应用程序试图进行日志记录时，你会发现你所期望的对日志框架（如 Log4J）的绑定并不起作用。
 
-In such cases with WAS the easiest thing to do is to invert the class loader hierarchy \(IBM calls it "parent last"\) so that the application controls the JCL dependency, not the container. That option isn’t always open, but there are plenty of other suggestions in the public domain for alternative approaches, and your mileage may vary depending on the exact version and feature set of the container.
-
+在 WAS 中，处理这种情况最简单的方法是反转类加载顺序（IBM 称之为“parent last”），以便让应用程序而非容器来控制 JCL 的依赖关系。当然这种方式并不是所有容器都支持，但还有许多其它建议方案可供选择，具体的解决方案可能取决于特定的容器及其具体的版本。
