--- a/PartI/0013-2.3.2-Logging.md
+++ b/PartI/0013-2.3.2-Logging.md
@@ -6,7 +6,7 @@ Spring 强制依赖于 Jakarta Commons Logging 的 API（JCL），即现在的 A
 
 `commons-logging` 是 Apache 早期提供的日志门面接口，其主要作用是提供一套日志接口，使用者可以自由的选择第三方的日志组件作为具体实现，如 Log4J、 Logback、 以及 JDK 提供的日志工具（java.util.logging，JUL）。`commons-logging` 实现了一个运行时发现算法，利用动态查找机制，在应用程序运行期从一些约定俗称的 classpath 中查找具体的日志实现框架。另外 `commons-logging` 内部有一个简单的日志实现，但功能很弱。
 
-#### 不使用 Commons Logging
+#### 禁用 Commons Logging
 
 `commons-logging` 在运行时发现日志框架的算法确实带来了很大的便利，但也有存在一些问题，如果现在将 Spring 框架作为一个新项目开发的话，可能会使用其它的日志工具，第一选择可能是 Simple Logging Facade for Java（[SLF4J](http://www.slf4j.org/），SLF4J 现在已经被应用于许多基于 Spring 框架的应用程序。
 
