--- a/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
+++ b/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
@@ -1,13 +1,13 @@
 ### 2.3.1 依赖管理和命名约定
 
-依赖管理和依赖注入不是同一个概念，要应用程序中使用 Spring 的功能（如依赖注入），需要在编译或运行期将所依赖的库（jar文件）导入到应用的 classpath 中。这些依赖关系通常是文件系统中的物理资源，而非依赖注入概念中由 IoC 容器创建的抽象资源。依赖关系的管理过程包括对这些资源的定位、存储、以及将其添加到 classpath 中。依赖关系可以是直接的（例如应用程序在运行时依赖于 Spring），也可以是间接的（例如应用程序依赖于 commons-pool，而commons-pool 依赖于 commons-dbcp，故应用程序间接依赖于 commons-dbcp）。间接依赖关系也被称为“传递性”依赖，属于最难识别和管理的依赖关系。
+依赖管理和依赖注入不是同一个概念，要在应用程序中使用 Spring 的功能（如依赖注入），需要在编译或运行期将所依赖的库（jar文件）导入到应用的 classpath 中。这些依赖关系通常是文件系统中的物理资源，而非依赖注入概念中由 IoC 容器创建的抽象资源。依赖关系的管理过程包括对这些资源的定位、存储、以及将其添加到 classpath 中。依赖关系可以是直接的（例如应用程序在运行时依赖于 Spring），也可以是间接的（例如应用程序依赖于 commons-pool，而 commons-pool 依赖于 commons-dbcp，故应用程序间接依赖于 commons-dbcp）。间接依赖关系也被称为“传递性”依赖，属于最难识别和管理的依赖关系。
 
-如果要使用 Spring，你需要获得一个包含你所需功能的库文件（jar），Spring 被打包为一系列模块，各个模块之间尽可能的分离依赖关系，以便你可以只使用需要的模块而忽略其余模块，例如，如果你不是编写 Web 应用程序，则不需要引入 `spring-web` 模块。Spring 各模块的库文件使用一种简写约定命名，如 `spring-*` 或 `spring-*.jar`，其中 `*` 表示模块名称（如 `spring-core`、 `spring-webmvc`、 `spring-jms` 等）。实际使用的 jar 文件名通常在模块名后以短横线连接了该模块的版本号（如 `spring-core-5.0.0.M4.jar`）。
+如果要使用 Spring，你需要获得一个包含你所需功能的库文件（jar），Spring 被打包为一系列模块，各个模块之间依赖关系尽可能的做到了分离，以便你可以只使用需要的模块而忽略其余模块，例如，如果你不是编写 Web 应用程序，则不需要引入 `spring-web` 模块。Spring 各模块的库文件使用一种简写约定命名，如 `spring-*` 或 `spring-*.jar`，其中 `*` 表示模块名称（如 `spring-core`、 `spring-webmvc`、 `spring-jms` 等）。实际使用的 jar 文件名通常在模块名后以短横线连接了该模块的版本号（如 `spring-core-5.0.0.M4.jar`）。
 
 Spring 框架的每个版本都会将库文件发布到以下位置：
 
 * **[Maven Central](https://search.maven.org)**，Maven 默认的查询仓库，不需要任何特殊配置即可使用，许多 Spring 依赖的库也可以在这里找到，Spring 社区的大部分项目都是使用 Maven 进行依赖管理。在 Maven 中 Spring 模块的 jar 名称（artifactId）是 `spring-*-<version>.jar` 的形式，groupId 为 `org.springframework`。
-* **[一个专门用于 Spring 的公共 Maven 仓库](http://repo.spring.io)**，除了最终的 GA 版本，这个仓库还存储快照版本（[snapshots](http://repo.spring.io/snapshot)）和里程碑版本（[milestones](http://repo.spring.io/milestone)）。其中的 jar 文件命名与 Maven Central 一致，这里可以用于获取 Spring 的开发版本，并可以和 Maven Central 配合使用。这里还存储着包含 Spring 所有模块的 zip 文件包，便于一次性下载 Spring 的所有 jar 文件。
+* **[Spring Maven 公共仓库](http://repo.spring.io)**，除了最终的 GA 版本，这个仓库还存储快照版本（[snapshots](http://repo.spring.io/snapshot)）和里程碑版本（[milestones](http://repo.spring.io/milestone)）。其中的 jar 文件命名与 Maven Central 一致，这里可以用于获取 Spring 的开发版本，并可以和 Maven Central 配合使用。这里还存储着包含 Spring 所有模块的 zip 文件包，便于一次性下载 Spring 的所有 jar 文件。
 
 你首先需要决定如何管理你的依赖关系，我们建议使用一个自动化的依赖管理工具，如 Maven、 Gradle、 或 Ivy，当然你也可以手动下载所有的 jar 文件。
 
@@ -46,7 +46,7 @@ Spring 框架的每个版本都会将库文件发布到以下位置：
 
 #### Maven 依赖管理
 
-如果使用 [Maven](https://maven.apache.org/) 进行以来管理，则不需要显式的提供日志依赖关系。例如，要使用 Spring 的应用程序上下文和注入容器，那 Maven 的依赖配置如下：
+如果使用 [Maven](https://maven.apache.org/) 进行依赖管理，则不需要显式的提供日志依赖关系。例如，要使用 Spring 的应用程序上下文和注入容器，那 Maven 的依赖配置如下：
 
 ```xml
 <dependencies>
@@ -99,7 +99,7 @@ Spring 框架的每个版本都会将库文件发布到以下位置：
 
 #### Maven BOM （Bill Of Materials）
 
-在使用 Maven 管理项目时，有时可能会引入不同版本 Spring，例如一些第三方库或另外一个基于 Spring 的项目依赖了旧版本的 Spring，如果不显式声明你的直接依赖，可能会出现各种意外问题。
+在使用 Maven 管理项目时，有时可能会引入不同版本的 Spring，例如一些第三方库或另外一个基于 Spring 的项目依赖了旧版本的 Spring，如果不显式声明你的直接依赖，可能会出现各种意外问题。
 
 针对这个问题，Maven 支持一种 “bill of materials”（BOM）依赖的概念，你可以在 `dependencyManagement` 中直接引入 `spring-framework-bom`，以确保依赖的所有 Spring 模块（包括直接的和间接的）都是同一版本。
 
@@ -133,8 +133,6 @@ Spring 框架的每个版本都会将库文件发布到以下位置：
 ```
 
 #### Gradle 依赖管理
-
-To use the Spring repository with the[Gradle](http://www.gradle.org/)build system, include the appropriate URL in the`repositories`section:
 
 要在 [Gradle](http://www.gradle.org/) 构建项目时使用 Spring 仓库，需要在 `repositories` 部分指定仓库 URL：
 
