--- a/PartII/0018-3.2-Container-overview.md
+++ b/PartII/0018-3.2-Container-overview.md
@@ -1,19 +1,13 @@
-## 3.2 Container overview
+## 3.2 容器概述
 
-The interface`org.springframework.context.ApplicationContext`represents the Spring IoC container and is responsible for instantiating, configuring, and assembling the aforementioned beans. The container gets its instructions on what objects to instantiate, configure, and assemble by reading configuration metadata. The configuration metadata is represented in XML, Java annotations, or Java code. It allows you to express the objects that compose your application and the rich interdependencies between such objects.
+`ApplicationContext` 表示 Spring IoC 容器，它通过 `org.springframework.context.ApplicationContext` 接口定义，可以加载`配置元数据`中定义的 Bean，并将这些 Bean 集中管理起来，当有请求到来的时候分配合适的 Bean 进行处理。`配置元数据`通常使用 XML、 Java 注解或 Java 代码来表示，可以用来描述应用程序中的对象，以及这些对象之间的依赖关系。
 
-Several implementations of the`ApplicationContext`interface are supplied out-of-the-box with Spring. In standalone applications it is common to create an instance of[`ClassPathXmlApplicationContext`](http://docs.spring.io/spring-framework/docs/5.0.0.M4/javadoc-api/org/springframework/context/support/ClassPathXmlApplicationContext.html)or[`FileSystemXmlApplicationContext`](http://docs.spring.io/spring-framework/docs/5.0.0.M4/javadoc-api/org/springframework/context/support/FileSystemXmlApplicationContext.html). While XML has been the traditional format for defining configuration metadata you can instruct the container to use Java annotations or code as the metadata format by providing a small amount of XML configuration to declaratively enable support for these additional metadata formats.
+Spring 提供了几个 `ApplicationContext` 实现，最常用的如 `ClassPathXmlApplicationContext`、 `FileSystemXmlApplicationContext`、 以及 `WebXmlApplicationContext`。虽然 XML 是定义配置元数据的传统格式，但你也可以使用注解或代码的方式来定义，而只使用少量的 XML。
 
-In most application scenarios, explicit user code is not required to instantiate one or more instances of a Spring IoC container. For example, in a web application scenario, a simple eight \(or so\) lines of boilerplate web descriptor XML in the`web.xml`file of the application will typically suffice \(see[Section 3.15.4, “Convenient ApplicationContext instantiation for web applications”](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#context-create)\). If you are using the[Spring Tool Suite](https://spring.io/tools/sts)Eclipse-powered development environment this boilerplate configuration can be easily created with few mouse clicks or keystrokes.
+在大多数应用场景中，不需要显式的实例化 Spring IoC 容器。例如在 Web 应用场景中，通常只需要在 `web.xml` 文件中配置 8 行（或更多）简单的样板描述就够了。如果使用 Spring Tool Suite 这样的工具套件，则只需少量操作即可轻松创建这些样板设置。 
 
-The following diagram is a high-level view of how Spring works. Your application classes are combined with configuration metadata so that after the`ApplicationContext`is created and initialized, you have a fully configured and executable system or application.
+下图是 Spring 如何工作的简单示意图，应用程序的 POJOs 与配置元数据相结合，在 `ApplicationContext` 创建和初始化之后，提供了一个配置完全且可执行的应用程序。
 
-
-
-**Figure 3.1. The Spring IoC container**
+**Figure 3.1. Spring IoC 容器**
 
 ![](../images/container-magic.png "container magic")
-
-  
-
-
