--- a/PartII/0019-3.2.1-Configuration-metadata.md
+++ b/PartII/0019-3.2.1-Configuration-metadata.md
@@ -1,23 +1,19 @@
-### 3.2.1 Configuration metadata
+### 3.2.1 配置元数据
 
-As the preceding diagram shows, the Spring IoC container consumes a form of_configuration metadata_; this configuration metadata represents how you as an application developer tell the Spring container to instantiate, configure, and assemble the objects in your application.
+Spring IoC 容器对 Bean 的实例化、配置及管理通过 _配置元数据_ 来定义，配置元数据传统上以简单直观的 XML 格式描述，本章将使用 XML 格式来进行描述。
 
-Configuration metadata is traditionally supplied in a simple and intuitive XML format, which is what most of this chapter uses to convey key concepts and features of the Spring IoC container.
+> XML 并不是描述配置元数据的唯一形式，Spring IoC 容器本身与这些描述形式完全解耦。
 
-> XML-based metadata is _not_ the only allowed form of configuration metadata. The Spring IoC container itself is _totally_ decoupled from the format in which this configuration metadata is actually written. These days many developers choose [Java-based configuration](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-java) for their Spring applications.
+更多其他的描述形式如:
 
-For information about using other forms of metadata with the Spring container, see:
+* [基于注解的配置](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-annotation-config)，Spring 从 2.5 版本开始引入 `注解` 来描述 Bean 的配置及依赖关系，对 Bean 的定义可以通过在 Bean 的实现类上标注注解来实现。
+* [基于 Java 的配置](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-java)，从 Spring 3.0 开始，引入了 Spring JavaConfig 项目的许多功能，可以使用 Java 而非 XML 来定义 Bean。详情可以参阅 `@Configuration`、 `@Bean`、 `@Import`、 `@DependsOn` 等注解。
 
-* [Annotation-based configuration](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-annotation-config)
-  : Spring 2.5 introduced support for annotation-based configuration metadata.
-* [Java-based configuration](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-java)
-  : Starting with Spring 3.0, many features provided by the Spring JavaConfig project became part of the core Spring Framework. Thus you can define beans external to your application classes by using Java rather than XML files. To use these new features, see the `@Configuration`, `@Bean`, `@Import` and `@DependsOn` annotations.
+Spring 的 Bean 配置用于指导 Spring 容器进行 Bean 的生产、依赖关系注入及 Bean 实例的分配，通常会配置多个（至少一个） Bean 的定义。基于 XML 的配置形式顶级元素为 `<beans/>`，在其中以 `<bean/>` 元素描述 Bean。基于 Java 的配置方式则是在一个以 `@Configuration` 注解的类中用 `@Bean` 注解来描述 Bean 的定义。
 
-Spring configuration consists of at least one and typically more than one bean definition that the container must manage. XML-based configuration metadata shows these beans configured as`<bean/>`elements inside a top-level`<beans/>`element. Java configuration typically uses`@Bean`annotated methods within a`@Configuration`class.
+这些 Bean 的定义对应了构成应用程序的实际对象。通常是业务层对象、数据访问对象（DAO）、表示层对象（如 Struts 的 Action、 Spring MVC 的 Controller）、及基础框架对象（如 Hibernate 的 SessionFactory、 JMS 队列等）。一般不会配置领域对象（如业务数据模型），因为领域对象通常由 DAO 和业务逻辑创建和加载。但可以通过 Spring 集成的 AspectJ 来配置在 IoC 容器之外创建的对象，请参阅[使用 AspectJ 向 Spring 注入领域对象](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#aop-atconfigurable)。
 
-These bean definitions correspond to the actual objects that make up your application. Typically you define service layer objects, data access objects \(DAOs\), presentation objects such as Struts`Action`instances, infrastructure objects such as Hibernate`SessionFactories`, JMS`Queues`, and so forth. Typically one does not configure fine-grained domain objects in the container, because it is usually the responsibility of DAOs and business logic to create and load domain objects. However, you can use Spring’s integration with AspectJ to configure objects that have been created outside the control of an IoC container. See[Using AspectJ to dependency-inject domain objects with Spring](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#aop-atconfigurable).
-
-The following example shows the basic structure of XML-based configuration metadata:
+下面的例子展示了基于 XML 配置的基本结构：
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -39,5 +35,5 @@ The following example shows the basic structure of XML-based configuration metad
 </beans>
 ```
 
-The `id` attribute is a string that you use to identify the individual bean definition. The `class` attribute defines the type of the bean and uses the fully qualified classname. The value of the id attribute refers to collaborating objects. The XML for referring to collaborating objects is not shown in this example; see [Dependencies](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-dependencies) for more information.
+`id` 属性是一个用于唯一标识一个 Bean 定义的字符串，其值就是该 Bean 在容器中的名称。`class` 定义了 Bean 的类型，使用完整类名（包含包路径和类名）。这个 XML 示例没有显示引用依赖 Bean 的部分，详情可以参阅 [依赖注入](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-dependencies) 部分。
 
