--- a/PartII/0017-3.2-Container-overview.md
+++ b/PartII/0017-3.2-Container-overview.md
@@ -1,12 +1,12 @@
 ## 3.2 容器概述
 
-`ApplicationContext` 表示 Spring IoC 容器，它通过 `org.springframework.context.ApplicationContext` 接口定义，可以加载`配置元数据`中定义的 Bean，并将这些 Bean 集中管理起来，当有请求到来的时候分配合适的 Bean 进行处理。`配置元数据`通常使用 XML、 Java 注解或 Java 代码来表示，可以用来描述应用程序中的对象，以及这些对象之间的依赖关系。
+`org.springframework.context.ApplicationContext` 接口代表 Spring IoC 容器，负责实例化、配置和组装`配置元数据`中定义的 Bean。`配置元数据`通常使用 XML、 Java 注解或 Java 代码来表示，可以用来描述应用程序中的对象，以及这些对象之间的依赖关系。
 
-Spring 提供了几个 `ApplicationContext` 实现，最常用的如 `ClassPathXmlApplicationContext`、 `FileSystemXmlApplicationContext`、 以及 `WebXmlApplicationContext`。虽然 XML 是定义配置元数据的传统格式，但你也可以使用注解或代码的方式来定义，而只使用少量的 XML。
+Spring 提供了一些 `ApplicationContext` 的实现，在单独的应用中通常是创建一个 `ClassPathXmlApplicationContext` 或 `FileSystemXmlApplicationContext` 的实例。虽然 XML 是定义配置元数据的传统格式，但你也可以指示容器使用 Java 注解或代码的方式来作为元数据的格式，并通过提供少量的 XML 配置声明来使容器支持这些额外的元数据格式。
 
-在大多数应用场景中，不需要显式的实例化 Spring IoC 容器。例如在 Web 应用场景中，通常只需要在 `web.xml` 文件中配置 8 行（或更多）简单的样板描述就够了。如果使用 Spring Tool Suite 这样的工具套件，则只需少量操作即可轻松创建这些样板设置。 
+在大多数应用场景中，不需要显式的实例化 Spring IoC 容器。例如在 Web 应用场景中，通常只需要在 `web.xml` 文件中配置 8 行左右简单的样板描述就足够了。如果使用 Spring Tool Suite 这样的工具套件，则只需少量操作即可轻松创建这些样板设置。 
 
-下图是 Spring 如何工作的简单示意图，应用程序的 POJOs 与配置元数据相结合，在 `ApplicationContext` 创建和初始化之后，提供了一个配置完全且可执行的应用程序。
+下图演示了从高层视野来看 Spring 是如何工作的，应用程序的 POJOs 与配置元数据相结合，在 `ApplicationContext` 创建和初始化之后，提供了一个配置完全且可执行的应用程序。
 
 **Figure 3.1. Spring IoC 容器**
 
