--- a/PartII/0018-3.2.1-Configuration-metadata.md
+++ b/PartII/0018-3.2.1-Configuration-metadata.md
@@ -1,17 +1,17 @@
 ### 3.2.1 配置元数据
 
-Spring IoC 容器对 Bean 的实例化、配置及管理通过 _配置元数据_ 来定义，配置元数据传统上以简单直观的 XML 格式描述，本章将使用 XML 格式来进行描述。
+Spring IoC 容器对 Bean 的实例化、配置及管理通过 _配置元数据_ 来定义，配置元数据传统上以简单直观的 XML 格式描述，本章大部分都是使用 XML 格式来描述 Spring IoC 容器的核心概念及功能。
 
-> XML 并不是描述配置元数据的唯一形式，Spring IoC 容器本身与这些描述形式完全解耦。
+> XML 并不是描述配置元数据的唯一形式，Spring IoC 容器本身与配置元数据的描述形式是完全解耦的。目前许多开发者在他们的 Spring 应用中选用基于 Java 配置的元数据描述形式。
 
 更多其他的描述形式如:
 
-* [基于注解的配置](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-annotation-config)，Spring 从 2.5 版本开始引入 `注解` 来描述 Bean 的配置及依赖关系，对 Bean 的定义可以通过在 Bean 的实现类上标注注解来实现。
+* [基于注解的配置](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-annotation-config)，Spring 从 2.5 版本开始引入基于 `注解` 的配置元数据的描述支持，对 Bean 的定义可以通过在 Bean 的实现类上标注注解来实现。
 * [基于 Java 的配置](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-java)，从 Spring 3.0 开始，引入了 Spring JavaConfig 项目的许多功能，可以使用 Java 而非 XML 来定义 Bean。详情可以参阅 `@Configuration`、 `@Bean`、 `@Import`、 `@DependsOn` 等注解。
 
-Spring 的 Bean 配置用于指导 Spring 容器进行 Bean 的生产、依赖关系注入及 Bean 实例的分配，通常会配置多个（至少一个） Bean 的定义。基于 XML 的配置形式顶级元素为 `<beans/>`，在其中以 `<bean/>` 元素描述 Bean。基于 Java 的配置方式则是在一个以 `@Configuration` 注解的类中用 `@Bean` 注解来描述 Bean 的定义。
+Spring 的 Bean 配置用于指导 Spring 容器进行 Bean 的生产、依赖关系注入及 Bean 实例的分配，通常会配置多个（至少一个） Bean 的定义。基于 XML 的配置形式顶级元素为 `<beans/>`，在其中以 `<bean/>` 元素描述 Bean。基于 Java 的配置方式通常是在一个以 `@Configuration` 注解的类中用 `@Bean` 注解方法来描述。
 
-这些 Bean 的定义对应了构成应用程序的实际对象。通常是业务层对象、数据访问对象（DAO）、表示层对象（如 Struts 的 Action、 Spring MVC 的 Controller）、及基础框架对象（如 Hibernate 的 SessionFactory、 JMS 队列等）。一般不会配置领域对象（如业务数据模型），因为领域对象通常由 DAO 和业务逻辑创建和加载。但可以通过 Spring 集成的 AspectJ 来配置在 IoC 容器之外创建的对象，请参阅[使用 AspectJ 向 Spring 注入领域对象](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#aop-atconfigurable)。
+这些 Bean 的定义对应了构成应用程序的实际对象。通常是业务层对象、数据访问对象（DAO）、表示层对象（如 Struts 的 Action、 Spring MVC 的 Controller）、及底层对象（如 Hibernate 的 SessionFactory、 JMS 队列等）。一般不会配置更细粒度的领域对象（如业务数据模型），因为领域对象通常由 DAO 和业务逻辑创建和加载。但可以通过 Spring 集成的 AspectJ 来配置在 IoC 容器之外创建的对象，请参阅[使用 AspectJ 向 Spring 注入领域对象](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#aop-atconfigurable)。
 
 下面的例子展示了基于 XML 配置的基本结构：
 
