--- a/PartII/0019-3.2.2-Instantiating-a-container.md
+++ b/PartII/0019-3.2.2-Instantiating-a-container.md
@@ -1,15 +1,15 @@
-### 3.2.2 Instantiating a container
+### 3.2.2 容器的实例化
 
-Instantiating a Spring IoC container is straightforward. The location path or paths supplied to an`ApplicationContext`constructor are actually resource strings that allow the container to load configuration metadata from a variety of external resources such as the local file system, from the Java`CLASSPATH`, and so on.
+Spring IoC 容器的实例化很简单，`ApplicationContext` 的构造方法接收一个和多个`资源`路径参数，允许容器从各种外部资源（如本地文件系统、 classpath 等）加载配置元数据。
 
 ```java
 ApplicationContext context =
 	new ClassPathXmlApplicationContext(new String[] {"services.xml", "daos.xml"});
 ```
 
-After you learn about Spring’s IoC container, you may want to know more about Spring’s `Resource` abstraction, as described in [Chapter 4,Resources](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#resources), which provides a convenient mechanism for reading an InputStream from locations defined in a URI syntax. In particular, `Resource` paths are used to construct applications contexts as described in [Section 4.7, “Application contexts and Resource paths”](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#resources-app-ctx).
+> 在了解了 Spring 的 IoC 容器后，你可能需要了解有关 Spring 资源抽象的更多信息，如第 4 章“资源”中所述，它提供了一种方便的机制从 URI 语法定义的位置中读取输入流（InputStream）。`资源`路径通常用于构建应用程序上下文，如 [4.7 应用程序上下文和资源路径](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#resources-app-ctx)。
 
-The following example shows the service layer objects `(services.xml)` configuration file:
+下面示例演示了业务层对象的配置文件`（services.xml）`：
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -31,7 +31,7 @@ The following example shows the service layer objects `(services.xml)` configura
 </beans>
 ```
 
-The following example shows the data access objects `daos.xml` file:
+下面示例演示了数据访问对象的配置文件`（doas.xml）`：
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -54,13 +54,13 @@ The following example shows the data access objects `daos.xml` file:
 </beans>
 ```
 
-In the preceding example, the service layer consists of the class `PetStoreServiceImpl`, and two data access objects of the type `JpaAccountDao` and `JpaItemDao` \(based on the JPA Object/Relational mapping standard\). The `property name` element refers to the name of the JavaBean property, and the `ref` element refers to the name of another bean definition. This linkage between `id` and `ref` elements expresses the dependency between collaborating objects. For details of configuring an object’s dependencies, see [Dependencies](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-dependencies).
+上述例子中，业务层由 `PetStoreServiceImpl` 以及两个类型为 `JpaAccountDao` 和 `JpaItemDao` 的数据访问对象（基于 JPA 的对象/关系映射标准）组成。`property name` 元素是指 JavaBean 的属性名。`ref` 是引用另一个 Bean 定义的名称（`id`），`id` 和 `ref` 之间的这种连接关系表示对象之间的依赖关系，关于对象之间的依赖配置可以参阅 [依赖关系](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-dependencies)。
 
-#### Composing XML-based configuration metadata
+#### 编写 XML 配置文件
 
-It can be useful to have bean definitions span multiple XML files. Often each individual XML configuration file represents a logical layer or module in your architecture.
+Bean 的定义跨越多个 XML 文件是非常有用的，通常每个单独的 XML 文件表示一个逻辑层或模块。
 
-You can use the application context constructor to load bean definitions from all these XML fragments. This constructor takes multiple`Resource`locations, as was shown in the previous section. Alternatively, use one or more occurrences of the`<import/>`element to load bean definitions from another file or files. For example:
+你可以使用应用程序上下文的构造函数来从所有的 XML 片段中加载 Bean 的定义。如上文所述，这个构造函数可以接收多个`资源`路径，也可以在一个 XML 文件中使用 `<import/>` 元素来引入其它 XML 文件描述的 Bean 定义。例如：
 
 ```xml
 <beans>
@@ -73,9 +73,8 @@ You can use the application context constructor to load bean definitions from al
 </beans>
 ```
 
-In the preceding example, external bean definitions are loaded from three files: `services.xml`, `messageSource.xml`, and `themeSource.xml`. All location paths are relative to the definition file doing the importing, so `services.xml` must be in the same directory or classpath location as the file doing the importing, while `messageSource.xml` and `themeSource.xml` must be in a `resources` location below the location of the importing file. As you can see, a leading slash is ignored, but given that these paths are relative, it is better form not to use the slash at all. The contents of the files being imported, including the top level `<beans/>` element, must be valid XML bean definitions according to the Spring Schema.
+上述例子中，外部 Bean 的定义从三个文件加载：`services.xml`、 `messageSource.xml` 和 `themeSource.xml`。所有路径都是相对于执行导入的文件的，因此 `service.xml` 文件必须与执行导入的文件在相同的目录下或同一个 classpath 下，而 `messageSource.xml` 和 `themeSource.xml` 则是位于执行导入的文件所在目录下的 `resources` 子目录中。注意 `/resources/themeSource.xml` 路径的前导斜杠，鉴于这些路径都是相对的，所以最好不要加这个前导斜杠，被导入的 XML 文件内容（包括顶层 `<beans/>` 元素）必须是符合 Spring XML Schema 的有效 Bean 定义。
 
-> It is possible, but not recommended, to reference files in parent directories using a relative "../" path. Doing so creates a dependency on a file that is outside the current application. In particular, this reference is not recommended for "classpath:" URLs \(for example, "classpath:../services.xml"\), where the runtime resolution process chooses the "nearest" classpath root and then looks into its parent directory. Classpath configuration changes may lead to the choice of a different, incorrect directory.
+> 可以使用 “../” 相对路径来引用父目录中的文件，但不推荐使用，这样做会对当前应用程序之外的文件产生依赖，尤其是不建议在 "classpath:url" 中使用（如“classpath:../services.xml”），运行时解析处理会选择“最近”的 classpath 根目录，然后去寻找它的父目录。Classpath 配置的更改可能会导致进入另外一个错误的目录。
 >
-> You can always use fully qualified resource locations instead of relative paths: for example, "file:C:/config/services.xml" or "classpath:/config/services.xml". However, be aware that you are coupling your application’s configuration to specific absolute locations. It is generally preferable to keep an indirection for such absolute locations, for example, through "${…​}" placeholders that are resolved against JVM system properties at runtime.
-
+> 可以使用全址资源位置来代替相对路径，如 “file:C:/config/services.xml” 或者 “classpath:/config/services.xml”，但要注意这样做会使得应用程序与绝对路径耦合。通常更可取的方式是间接的使用绝对路径，例如通过 `${…​}` 占位符在运行时解析 JVM 系统属性。
