--- a/PartII/0020-3.2.3-Using-the-container.md
+++ b/PartII/0020-3.2.3-Using-the-container.md
@@ -1,6 +1,6 @@
 ### 3.2.3 容器的使用
 
-`ApplicationContext` 是一个高级工厂接口，它能够维护不同的 Bean 机器依赖关系的注册表。使用 `T getBean(String name, Class<T> requiredType)` 方法可以获取 Bean 的实例。
+`ApplicationContext` 是一个高级工厂接口，它能够维护不同的 Bean 及其依赖关系的注册表。使用 `T getBean(String name, Class<T> requiredType)` 方法可以获取 Bean 的实例。
 
 通过 `ApplicationContext` 可以使用下面的方式读取 Bean 的定义及访问它们：
 
