--- a/PartII/0023-3.3.1-Naming-beans.md
+++ b/PartII/0023-3.3.1-Naming-beans.md
@@ -1,41 +1,41 @@
-### 3.3.1 Naming beans
+### 3.3.1 Bean 命名
 
-Every bean has one or more identifiers. These identifiers must be unique within the container that hosts the bean. A bean usually has only one identifier, but if it requires more than one, the extra ones can be considered aliases.
+每个 Bean 都有一个或多个标识符，这些标识符在托管该 Bean 的容器中必须是唯一的。一个 Bean 通常只有一个标识符，但如果它需要多个标识符，那么额外的标识符可以被认为是别名。
 
-In XML-based configuration metadata, you use the`id`and/or`name`attributes to specify the bean identifier\(s\). The`id`attribute allows you to specify exactly one id. Conventionally these names are alphanumeric \('myBean', 'fooService', etc.\), but may contain special characters as well. If you want to introduce other aliases to the bean, you can also specify them in the`name`attribute, separated by a comma \(`,`\), semicolon \(`;`\), or white space. As a historical note, in versions prior to Spring 3.1, the`id`attribute was defined as an`xsd:ID`type, which constrained possible characters. As of 3.1, it is defined as an`xsd:string`type. Note that bean`id`uniqueness is still enforced by the container, though no longer by XML parsers.
+在基于 XML 的配置元数据中，使用 `id` 和/或 `name` 属性来指定 Bean 的标识符。`id` 属性允许你指定一个 id。通常这些标识符是字母数字（如“myBean”、 “fooService” 等），但也可以包含特殊字符。如果要对 Bean 引入其它别名，可以在 `name` 属性中指定，用逗号 `,`、 分号 `;` 或空格分割。在 Spring 3.1 之前的版本中，`id` 属性被定义为 `xsd:ID` 类型，用以唯一性约束，从 3.1 开始，`id` 被定义为 `xsd:string` 类型，需要注意的是，虽然 Bean ID 的唯一性不再由 XML 解析器约束，但仍然由容器强制执行。
 
-You are not required to supply a name or id for a bean. If no name or id is supplied explicitly, the container generates a unique name for that bean. However, if you want to refer to that bean by name, through the use of the`ref`element or[Service Locator](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-servicelocator)style lookup, you must provide a name. Motivations for not supplying a name are related to using[inner beans](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-inner-beans)and[autowiring collaborators](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-autowire).
+为 Bean 指定 name 或 id 并不是必须的，如果没有明确指定 name 或 id，容器将为该 Bean 生成唯一名称。但是，如果要通过名称引用该 Bean，如使用 `ref` 元素或服务定位器（[Service Locator](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-servicelocator)）来引用或查找 Bean，则必须提供一个名称。匿名 Bean 一般用于 [内部 Bean](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-inner-beans) 和 [自动装配](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-autowire)。
 
-> **Bean Naming Conventions**
+> **Bean 命名约定**
 > 
-> The convention is to use the standard Java convention for instance field names when naming beans. That is, bean names start with a lowercase letter, and are camel-cased from then on. Examples of such names would be \(without quotes\)`'accountManager'`,`'accountService'`,`'userDao'`,`'loginController'`, and so forth.
+> Bean 的命名使用与标准 Java 规范相同的约定，也就是说 Bean 名称以小写字母开头，之后每个单词首字母大写（即驼峰式），如 `accountManager`、 `accountService`、 `userDao`、 `loginController` 等。
 > 
-> Naming beans consistently makes your configuration easier to read and understand, and if you are using Spring AOP it helps a lot when applying advice to a set of beans related by name.
+> Bean 命名的一致可以使你的配置更容易阅读和理解，而且如果使用 Spring AOP，当对一组名称具有关联性的 Bean 应用 advice 时会有很大帮助。
 
-> With component scanning in the classpath, Spring generates bean names for unnamed components, following the rules above: essentially, taking the simple class name and turning its initial character to lower-case. However, in the \(unusual\) special case when there is more than one character and both the first and second characters are upper case, the original casing gets preserved. These are the same rules as defined by `java.beans.Introspector.decapitalize` \(which Spring is using here\).
+> 使用 classpath 组件扫描（`<context:component-scan>`）时，Spring 会根据以上规则为未指定名称的 Bean 生成名称：基本上是使用类的简写名称（`Class.getSimpleName()`）并将其首字母转换为小写。然而，在特殊情况下，如果有多个字符，且第一个和第二个字符都是大写字母，则保留原始形式。这与 `java.beans.Introspector.decapitalize` 定义的规则相同。
 
-#### Aliasing a bean outside the bean definition
+#### 在 Bean 定义之外为 Bean 指定别名
 
-In a bean definition itself, you can supply more than one name for the bean, by using a combination of up to one name specified by the`id`attribute, and any number of other names in the`name`attribute. These names can be equivalent aliases to the same bean, and are useful for some situations, such as allowing each component in an application to refer to a common dependency by using a bean name that is specific to that component itself.
+在 Bean 定义本身中，可以使用 `id` 属性指定的唯一标识以及 `name` 属性指定的一个或以上的别名来为 Bean 提供多个名称，这些名称都指向同一个 Bean。在一些情况下这些别名很有用，比如允许应用程序的每个组件使用特定于该组件的 Bean 名称来引用常用的依赖。
 
-Specifying all aliases where the bean is actually defined is not always adequate, however. It is sometimes desirable to introduce an alias for a bean that is defined elsewhere. This is commonly the case in large systems where configuration is split amongst each subsystem, each subsystem having its own set of object definitions. In XML-based configuration metadata, you can use the`<alias/>`element to accomplish this.
+然而在定义 Bean 的时候就指定其所有的别名有时并不是很合适，有时我们希望能够为那些从其它地方引入的 Bean 指定别名，在大型应用中经常会遇到这种情况，Bean 的定义配置分割在各个子系统中，每个子系统具有其自己的对象定义集合。在基于 XML 的配置元数据中，可以使用 `<alias/>` 元素来实现这一点。
 
 ```xml
 <alias name="fromName" alias="toName"/>
 ```
 
-In this case, a bean in the same container which is named`fromName`, may also, after the use of this alias definition, be referred to as`toName`.
+上面示例中，在同一容器里名为 `fromName` 的 Bean，在增加别名后，也可以使用 `toName` 来引用。
 
-For example, the configuration metadata for subsystem A may refer to a DataSource via the name`subsystemA-dataSource`. The configuration metadata for subsystem B may refer to a DataSource via the name`subsystemB-dataSource`. When composing the main application that uses both these subsystems the main application refers to the DataSource via the name`myApp-dataSource`. To have all three names refer to the same object you add to the MyApp configuration metadata the following aliases definitions:
+如下面的例子，子系统 A 可以通过名称 `subsystemA-dataSource` 来引用 DataSource，子系统 B 可以通过名称 `subsystemB-dataSource` 来引用 DataSource。当使用两个子系统构成主应用程序时，主应用程序可以通过名称 `myApp-dataSource` 来引用 DataSource。
 
 ```xml
 <alias name="subsystemA-dataSource" alias="subsystemB-dataSource"/>
 <alias name="subsystemA-dataSource" alias="myApp-dataSource" />
 ```
 
-Now each component and the main application can refer to the dataSource through a name that is unique and guaranteed not to clash with any other definition \(effectively creating a namespace\), yet they refer to the same bean.
+这样，每个组件和主应用程序可以通过各自特定的名称来引用 DataSource，并保证不会和其它定义（有效命名空间内）冲突，但它们引用的都是同一个 Bean
 
-> **Java-configuration**
+> **Java 配置**
 >   
-> If you are using Java-configuration, the`@Bean`annotation can be used to provide aliases see[Section 3.12.3, “Using the @Bean annotation”](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-java-bean-annotation)for details.
+> 如果使用 Java 配置，`@Bean` 注解可以用于提供别名，详情见 [3.12.3 使用 @Bean 注解](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-java-bean-annotation)。
   
