--- a/PartII/0023-3.3.1-Naming-beans.md
+++ b/PartII/0023-3.3.1-Naming-beans.md
@@ -1,4 +1,4 @@
-### 3.3.1 Bean 命名
+### 3.3.1 Bean 的命名
 
 每个 Bean 都有一个或多个标识符，这些标识符在托管该 Bean 的容器中必须是唯一的。一个 Bean 通常只有一个标识符，但如果它需要多个标识符，那么额外的标识符可以被认为是别名。
 
