--- a/PartII/0022-3.3.1-Naming-beans.md
+++ b/PartII/0022-3.3.1-Naming-beans.md
@@ -14,9 +14,9 @@
 
 > 使用 classpath 组件扫描（`<context:component-scan>`）时，Spring 会根据以上规则为未指定名称的 Bean 生成名称：基本上是使用类的简写名称（`Class.getSimpleName()`）并将其首字母转换为小写。然而，在特殊情况下，如果有多个字符，且第一个和第二个字符都是大写字母，则保留原始形式。这与 `java.beans.Introspector.decapitalize` 定义的规则相同。
 
-#### 在 Bean 定义之外为 Bean 指定别名
+#### 在 `Bean 定义` 之外为 Bean 指定别名
 
-在 Bean 定义本身中，可以使用 `id` 属性指定的唯一标识以及 `name` 属性指定的一个或以上的别名来为 Bean 提供多个名称，这些名称都指向同一个 Bean。在一些情况下这些别名很有用，比如允许应用程序的每个组件使用特定于该组件的 Bean 名称来引用常用的依赖。
+在 `Bean 定义` 本身中，可以使用 `id` 属性指定的唯一标识以及 `name` 属性指定的一个或以上的别名来为 Bean 提供多个名称，这些名称都指向同一个 Bean。在一些情况下这些别名很有用，比如允许应用程序的每个组件使用特定于该组件的 Bean 名称来引用常用的依赖。
 
 然而在定义 Bean 的时候就指定其所有的别名有时并不是很合适，有时我们希望能够为那些从其它地方引入的 Bean 指定别名，在大型应用中经常会遇到这种情况，Bean 的定义配置分割在各个子系统中，每个子系统具有其自己的对象定义集合。在基于 XML 的配置元数据中，可以使用 `<alias/>` 元素来实现这一点。
 
