--- a/PartII/0023-3.3.2-Instantiating-beans.md
+++ b/PartII/0023-3.3.2-Instantiating-beans.md
@@ -1,27 +1,25 @@
-### 3.3.2 Instantiating beans
+### 3.3.2 Bean 的实例化
 
-A bean definition essentially is a recipe for creating one or more objects. The container looks at the recipe for a named bean when asked, and uses the configuration metadata encapsulated by that bean definition to create \(or acquire\) an actual object.
+`Bean 定义` 实质上是用于创建一个或多个对象的“配方”。当需要一个 Bean 的时候，容器会查看这个 Bean 的“配方”，并使用该 `Bean 定义` 封装的配置元数据来创建（或获取）实际对象。
 
-If you use XML-based configuration metadata, you specify the type \(or class\) of object that is to be instantiated in the`class`attribute of the`<bean/>`element. This`class`attribute, which internally is a`Class`property on a`BeanDefinition`instance, is usually mandatory. \(For exceptions, see[the section called “Instantiation using an instance factory method”](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-class-instance-factory-method)and[Section 3.7, “Bean definition inheritance”](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-child-bean-definitions).\) You use the`Class`property in one of two ways:
+如果使用基于 XML 的配置元数据，可以在 `<bean/>` 元素的 `class` 特性中指定要实例化的对象的类型（或类）。这个 `class` 属性在 `BeanDefinition` 实例中是一个 `Class` 属性，通常情况下是必须要指定的（关于例外情况，可以参阅 [使用实例工厂方法进行实例化](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-class-instance-factory-method) 和 [Bean 定义的继承](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-child-bean-definitions)）。你可以通过以下两种方法使用 Class 属性：
 
-* Typically, to specify the bean class to be constructed in the case where the container itself directly creates the bean by calling its constructor reflectively, somewhat equivalent to Java code using the `new` operator.
-* To specify the actual class containing the `static` factory method that will be invoked to create the object, in the less common case where the container invokes a `static` _factory_ method on a class to create the bean. The object type returned from the invocation of the `static` factory method may be the same class or another class entirely.
+* 通常情况是指定 Bean 的 `class`，容器通过反射调用其构造方法来直接创建 Bean，这类似于在 Java 代码中使用 `new` 关键字创建对象。
+* 指定一个包含静态工厂方法的类，容器调用这个静态工厂方法来创建 Bean。从静态工厂方法返回的对象类型可能是相同的类，也可能是另外一个类。
 
-> **Inner class names. **If you want to configure a bean definition for a`static`nested class, you have to use the_binary_name of the nested class.
-> 
-> For example, if you have a class called`Foo`in the`com.example`package, and this`Foo`class has a`static`nested class called`Bar`, the value of the`'class'`attribute on a bean definition would be…​
-> 
-> `com.example.Foo$Bar`
-> 
-> Notice the use of the`$`character in the name to separate the nested class name from the outer class name.
+> **内部类名. **如果要为静态内部类配置 `Bean 定义`，则必须使用内部类的二进制名称。
+>
+> 例如，如果在 `com.example` 包中又一个名为 `Foo` 的类，并且 `Foo` 类中有一个名为 `Bar` 的静态内部类，那么在 `Bean 定义` 中 `class` 特性的值应该为：`com.example.Foo$Bar`。
+>
+> 注意，在名称中使用 `$` 字符将外部类名和内部类名分隔开。
 
-#### Instantiation with a constructor
+#### 以构造方法实例化
 
-When you create a bean by the constructor approach, all normal classes are usable by and compatible with Spring. That is, the class being developed does not need to implement any specific interfaces or to be coded in a specific fashion. Simply specifying the bean class should suffice. However, depending on what type of IoC you use for that specific bean, you may need a default \(empty\) constructor.
+当通过构造方法创建 Bean 时，所有标准类都可以被 Spring 使用和兼容。也就是说，正在开发的类不需要实现任何特定接口或使用任何特定编码方式，只需要指定 Bean 的 class 即可。然而，根据根据特定 Bean 所使用的 IoC 类型，可能需要一个默认（无参）的构造方法。
 
-The Spring IoC container can manage virtually_any_class you want it to manage; it is not limited to managing true JavaBeans. Most Spring users prefer actual JavaBeans with only a default \(no-argument\) constructor and appropriate setters and getters modeled after the properties in the container. You can also have more exotic non-bean-style classes in your container. If, for example, you need to use a legacy connection pool that absolutely does not adhere to the JavaBean specification, Spring can manage it as well.
+Spring IoC 容器可以管理几乎所有你想让它管理的类，不限于 JavaBean。大多数用户倾向使用只有默认（无参）构造方法和 setters/getters 的 JavaBean。但在容器中使用非 Bean 风格（non-bean-style）的类也是可以的，比如遗留的旧版连接池，很显然它并不符合 JavaBean 的规范，但 Spring 也能管理它。
 
-With XML-based configuration metadata you can specify your bean class as follows:
+基于 XML 的配置元数据可以如下来指定 Bean 的 class：
 
 ```xml
 <bean id="exampleBean" class="examples.ExampleBean"/>
