--- a/PartII/0023-3.3.2-Instantiating-beans.md
+++ b/PartII/0023-3.3.2-Instantiating-beans.md
@@ -27,7 +27,7 @@ Spring IoC 容器可以管理几乎所有你想让它管理的类，不限于 Ja
 <bean name="anotherExample" class="examples.ExampleBeanTwo"/>
 ```
 
-For details about the mechanism for supplying arguments to the constructor \(if required\) and setting object instance properties after the object is constructed, see [Injecting Dependencies](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-collaborators).
+关于使用有参构造方法并指定参数来实例化 Bean，以及在 Bean 实例化后设置实例的属性，请参阅 [依赖关系的注入](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-collaborators)。
 
 #### Instantiation with a static factory method
 
